--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.0",
     "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-react": "^4.3.1",
