--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
@@ -19,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.1.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
