--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
-  "name": "frontend",
+  "name": "warehouse-frontend",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "type": "commonjs",
+  "main": "electron/main.js",
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron": "vite build && electron .",
+    "electron:build": "vite build && electron-builder"
+  },
+  "win": {
+    "requestedExecutionLevel": "asInvoker"
+  },
+  "build": {
+    "appId": "com.petrik.warehousefrontend",
+    "win": {
+      "target": "nsis",
+      "icon": "public/icon.ico"
+    }
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
@@ -31,10 +45,13 @@
     "@types/react-dom": "^18.3.0",
     "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-react": "^4.3.1",
+    "electron": "^36.0.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^6.2.0"
